force-app/main/default/objects/B2B_Survey_Answer__c/B2B_Survey_Answer__c.object-meta.xml
<CustomObject>
    <label>B2B Survey Answer</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>B2B Survey Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Survey Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>