force-app/main/default/objects/B2B_Survey_Answer__c/fields/B2B_Answer_Comment__c.field-meta.xml
<CustomField>
    <fullName>B2B_Answer_Comment__c</fullName>
    <description>This field stores the comments added by the user on each survey answer.</description>
    <label>Answer Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>