force-app/main/default/objects/B2B_Survey_Answer__c/fields/B2B_Associated_Score__c.field-meta.xml
<CustomField>
    <fullName>B2B_Associated_Score__c</fullName>
    <description>This field holds the score associated with selected option by customer for a particular question.</description>
    <inlineHelpText>This field holds the score associated with selected option by customer for a particular question.</inlineHelpText>
    <label>Associated Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>