force-app/main/default/objects/B2B_Survey_Answer__c/fields/B2B_Survey__c.field-meta.xml
<CustomField>
    <fullName>B2B_Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field holds the linkage of survey.</description>
    <inlineHelpText>This field holds the linkage of survey.</inlineHelpText>
    <label>Survey</label>
    <referenceTo>B2B_Survey__c</referenceTo>
    <relationshipLabel>B2B Survey Answers</relationshipLabel>
    <relationshipName>B2B_Survey_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>