force-app/main/default/objects/B2B_Survey_Answer__c/fields/B2B_Survey_Question__c.field-meta.xml
<CustomField>
    <fullName>B2B_Survey_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field holds the linkage of question.</description>
    <inlineHelpText>This field holds the linkage of question.</inlineHelpText>
    <label>Survey Question</label>
    <referenceTo>B2B_Survey_Question__c</referenceTo>
    <relationshipLabel>B2B Survey Answers</relationshipLabel>
    <relationshipName>B2B_Survey_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>