force-app/main/default/objects/B2B_Survey_Answer__c/fields/B2B_Survey_Response__c.field-meta.xml
<CustomField>
    <fullName>B2B_Survey_Response__c</fullName>
    <description>This field stores the reference between Survey Response and The individual responses by the user</description>
    <label>Survey Response</label>
    <referenceTo>B2B_Survey_Response__c</referenceTo>
    <relationshipLabel>B2B Survey Answers</relationshipLabel>
    <relationshipName>B2B_Survey_Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>